tests/typing/errors/unfounded_datatype/rose_tree_ae.ae

type 'a list =
    Nil
  | Cons of { head : 'a; tail : 'a list }

type 'a tree =
    Tree of { elt : 'a; children : 'a tree list }
