tests/typing/errors/unfounded_datatype/rose_tree_ae.expected
File "tests/typing/errors/unfounded_datatype/rose_tree_ae.ae", line 6, character 5 to line 7, character 49:
6 | .....'a tree =
7 |     Tree of { elt : 'a; children : 'a tree list }
Error Not well founded datatype declaration
